<package>
  <name>moveit_r2_kinematics</name>
  <version>0.0.1</version>
  <description>Custom MoveIt! kinematics plugins for R2</description>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>r2_tree_kinematics</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>r2_tree_kinematics</run_depend>

  <export>
    <moveit_core plugin="${prefix}/moveit_r2_tree_kinematics_plugin_description.xml"/>
    <!-- <moveit_core plugin="${prefix}/moveit_r2_chain_kinematics_plugin_description.xml"/> -->
  </export>
</package>
